force-app/main/default/objects/Opportunity/fields/Obstacle_to_Contract__c.field-meta.xml
<CustomField>
    <fullName>Obstacle_to_Contract__c</fullName>
    <label>Obstacle to Contract Signed</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>