force-app/main/default/objects/Opportunity/fields/Option_Presentation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Option_Presentation_Notes__c</fullName>
    <label>Option Presentation Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>