force-app/main/default/objects/Opportunity/fields/Options_Presented__c.field-meta.xml
<CustomField>
    <fullName>Options_Presented__c</fullName>
    <label>Were Options Presented?</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>