force-app/main/default/objects/Opportunity/fields/Post_OM_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Post_OM_Email_Sent__c</fullName>
    <label>Post OM Email Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>