force-app/main/default/objects/Opportunity/fields/Property_Walk_Thru__c.field-meta.xml
<CustomField>
    <fullName>Property_Walk_Thru__c</fullName>
    <label>Property Walk Thru</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>